--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "the-total-facility",
   "private": true,
@@ -12,8 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "lucide-react": "^0.454.0",
-    "html2canvas": "^1.4.1",
-    "@emailjs/browser": "^4.4.1"
+    "html2canvas": "^1.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
